# ros-cot

./: README.txt
Bridge/: Bridge.cpp  CMakeSettings.json  ROSCOTBridge.cpp  gccbuild.sh
docker/: Dockerfile  aidtr_entrypoint.sh  build_image.sh
include/: CoTClient.hpp
include/Math/: Altitude.hpp  AltitudeLimits.hpp  Angle.hpp  Constants.hpp  Coordinate3D.hpp  GeoGeometry.hpp  GeoPolygon.hpp  Geodetics.hpp  (+15 more)
workspace/src/ros_cot/ros_cot_bridge/src/: CMakeLists.txt  ROSCOTBridge.cpp  gccbuild.txt
workspace/src/ros_cot/ros_cot_bridge/src/include/: CoTClient.hpp
workspace/src/ros_cot/ros_cot_bridge/src/include/Math/: ComplexGeoGeometry.hpp  Coordinate2D.hpp  CoordinateTransform.hpp  Current.hpp  CylindricalCoordinate.hpp  CylindricalPolygon.hpp  CylindricalPolygonalPrism.hpp  Distance.hpp  GeoPose.hpp  Geometry.hpp  Interval.hpp  LogisticFunction.hpp  Math.hpp  MovingHaven.hpp  NonNegativeDistance.hpp  NonNegativeDouble.hpp  NormalizedValue.hpp  Point2D.hpp  Point3D.hpp  PolygonalPrism.hpp  Power.hpp  RestrictedValue.hpp  ScaledValue.hpp  SpatialConstraints.hpp  SphericalCoordinate.hpp  Work.hpp
workspace/src/ros_cot/ros_cot_bridge/src/include/Messaging/: XmlDecoder.hpp
workspace/src/ros_cot/ros_cot_bridge/src/include/Utility/: Exception.hpp  SemaphoreWaitInLine.hpp  SwapClear.hpp  ThreadsafeLUT.hpp  UID.hpp  UTMConverter.hpp  WinError.hpp
workspace/src/ros_cot/ros_cot_bridge/src/include/cereal/types/: mavlink.hpp
workspace/src/ros_cot/ros_cot_bridge/src/src/: CoTClient.cpp
workspace/src/ros_cot/ros_cot_bridge/src/src/Messaging/: XmlMessagingBase.cpp
(+15 files in other folders)
